--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/CSS/app.css"/>
   </head>
   <body>
     <header>
@@ -24,4 +25,5 @@
         </p>
     </header>
   </body>
+  <script src="JS/Ejercicio_02.js"></script>
 </html>
