--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-MX">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/Assets/gato.png" />
+    <link rel="icon" type="image/x-icon" href="/Assets/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fundamentos de JavaScript - .: &lt;230574 &gt;:.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
